css: make sure insensitive scrollbars apperar like they should

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -447,6 +447,14 @@ GtkComboBox .button {
     background-color: @theme_base_color;
 }
 
+.scrollbar.slider:insensitive {
+    background-color: @theme_base_color;
+}
+
+.scrollbar.trough:insensitive {
+    background-color: shade (@theme_bg_color, 0.882);
+}
+
 /***********
  * Buttons *
  ***********/
